# mantissa-stance

./: Makefile  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md  deployment.md  policies.md
docs/compliance/: cis-aws-foundations-v2.0.md  cis-azure-foundations-v2.0.md  cis-gcp-foundations-v2.0.md  hipaa.md  nist-800-53.md  pci-dss-v4.0.md  soc2-type2.md
examples/: README.md
examples/configs/: alerting-config.yaml  scan-config.yaml  storage-config.yaml
examples/policies/: aws-security.yaml  compliance-cis.yaml  secrets-detection.yaml
examples/tutorials/: 01-quick-start.md  02-aws-scanning.md  03-multi-cloud.md  04-custom-policies.md  05-iac-scanning.md  06-alerting.md
infrastructure/aws/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/azure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/gcp/terraform/: main.tf  outputs.tf  variables.tf
policies/aws/apigateway/: authorization-required.yaml  client-certificate.yaml  cors-restrictive.yaml  execution-logging.yaml  no-public-access.yaml  private-endpoint.yaml  rate-limiting-configured.yaml  resource-policy.yaml  rest-api-logging.yaml  (+3 more)
policies/container/: approved-registries.yaml  base-image-age.yaml  critical-vulnerabilities.yaml  distroless.yaml  fixable-vulnerabilities.yaml  high-epss.yaml  high-vulnerabilities.yaml  image-signed.yaml  kev-vulnerabilities.yaml  license-compliance.yaml  malware-detected.yaml  no-latest-tag.yaml  root-user.yaml  sbom-available.yaml  sensitive-files.yaml
src/stance/: __init__.py  cli.py  cli_aggregation.py  cli_alerting.py  cli_analytics.py  cli_api_security.py  cli_auth.py  cli_automation.py  cli_benchmark.py  cli_ciem.py  cli_cloud.py  cli_collectors.py  cli_commands.py  cli_config.py  cli_dashboards.py  cli_detection.py  cli_diff.py  cli_docs.py  cli_drift.py  cli_dspm.py  cli_engine.py  cli_enrich.py  cli_exceptions.py  cli_export.py  cli_exposure.py  cli_iac.py  cli_identity.py  cli_llm.py  cli_notifications.py  cli_observability.py  cli_plugins.py  cli_query_engine.py  cli_reporting.py  cli_sbom.py  cli_scanner.py  cli_scanning.py  cli_scheduling.py  cli_shell.py  cli_state.py  cli_storage.py  (+3 more)
tests/: __init__.py  conftest.py  test_visualization.py
tests/integration/: __init__.py  test_alert_routing.py  test_dashboard_api.py  test_end_to_end.py  test_multi_cloud_sync.py  test_policy_evaluation.py  test_query_interface.py  test_scanning_workflows.py
tests/performance/: test_performance.py
tests/policies/: __init__.py  test_aws_ec2_policies.py  test_aws_iam_policies.py  test_aws_s3_policies.py  test_azure_policies.py  test_gcp_policies.py  test_kubernetes_policies.py
tests/unit/: __init__.py  test_aggregation.py  test_alerting.py  test_analytics.py  test_api_security.py  test_apigateway_collector.py  test_automation.py  test_azure_functions_collector.py  test_azure_sql_collector.py  test_cli.py  test_cli_aggregation.py  test_cli_alerting.py  test_cli_analytics.py  test_cli_auth.py  test_cli_automation.py  test_cli_cloud.py  test_cli_collectors.py  test_cli_config.py  test_cli_dashboards.py  test_cli_detection.py  test_cli_diff.py  test_cli_docs.py  test_cli_drift.py  test_cli_dspm.py  test_cli_engine.py  test_cli_enrich.py  test_cli_exceptions.py  test_cli_export.py  test_cli_exposure.py  test_cli_iac.py  test_cli_identity.py  test_cli_llm.py  test_cli_multi_scan.py  test_cli_notifications.py  test_cli_observability.py  test_cli_plugins.py  test_cli_query_engine.py  test_cli_reporting.py  test_cli_sbom.py  test_cli_scanner.py  (+96 more)
(+584 files in other folders)
